--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script><!--//--><![CDATA[// ><!--
-location.href="https://trck.singledates.xyz//tr?offer_id=432&aff_id=202"
+location.href="https://linklogick.trk2afse.com/click?pid=3768&offer_id=290&sub1=r7"
 //--><!]]]]><![CDATA[>
 
 //--><!
